--- a/web-app/index.html
+++ b/web-app/index.html
@@ -4,67 +4,41 @@
     <head>
         <meta charset="UTF-8">
         <title>computer vision web api demo</title>
-        <link rel="stylesheet" href="css/idangerous.swiper.css">
         <link rel="stylesheet" href="css/index.css">
 
         <script src="js/jquery-1.10.1.min.js"></script>
-        <script src="js/idangerous.swiper.min.js"></script>
+        <script src="js/jquery-form.min.js"></script>
         <script src="js/index.js"></script>
     </head>
     <body>
-        <div class="device">
-            <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide red-slide">
-                    <img src="images/demo1.jpg" style="width: 100%; height: 100%;"/>
-                </div>
-                <div class="swiper-slide blue-slide">
-                    <img src="images/demo2.jpg" style="width: 100%; height: 100%;"/>
-                </div>
-                <div class="swiper-slide orange-slide">
-                    <img src="images/demo3.jpg" style="width: 100%; height: 100%;"/>
-                </div>
-                <div class="swiper-slide blue-slide">
-                    <img src="images/demo4.jpg" style="width: 100%; height: 100%;"/>
-                </div>
-                <div class="swiper-slide red-slide">
-                    <img src="images/demo5.jpg" style="width: 100%; height: 100%;"/>
-                </div>
-                <div class="swiper-slide green-slide">
-                    <img src="images/demo6.jpg" style="width: 100%; height: 100%;"/>
-                </div>
-                <div class="swiper-slide green-slide">
-                    <img src="images/demo7.jpg" style="width: 100%; height: 100%;"/>
-                </div>
-                <div class="swiper-slide green-slide">
-                    <img src="images/demo8.jpg" style="width: 100%; height: 100%;"/>
-                </div>
+
+        <div class="upload">
+            <div style="margin-top:4px;">
+                <input id="online_image_url" class="upload-url" type="text" placeholder="copy and paste the online image url..." />
+                <input id="online_image_submit" class="upload-btn" type="button" value="submit"/>
             </div>
+
+            <div style="margin-top:4px;position:relative">
+                <form id="local_image_form" enctype="multipart/form-data">
+                    <input id="local_image_path" class="upload-url"  type="text" placeholder="click to browse local image file..." />
+                    <input id="local_image_submit" class="upload-btn" type="button" value="submit"/>
+
+                    <input id="local_image" name="local_image" class="upload-file" type="file" />
+                </form>
             </div>
-            <div class="pagination"></div>
         </div>
 
-        <div style="text-align:center; clear:both;">
-            <span class="upload">
-                <input type="text" class="upload-url" placeholder="copy and paste online image url..." id="image_url" />
-                <input type="button" class="upload-btn" value="submit" id="submit_url" />
-            </span> 
-
-            <span class="upload">
-                <input type="text" class="upload-url" placeholder="click to browse local image..." />
-                <input type="button" class="upload-btn" value="submit" id="submit_image" />
-                <input type="file" class="upload-input-file" />
-            </span> 
-        </div>
+        <div class="result-title">Detect Result:</div>
 
         <div class="result">
-            <div id="image_result" class="image_result">
-
+            <div style="width:640px;height:600px;float:left;background-color:burlywood;">
+                <img id="image_result" style="width:auto;height:auto;max-width:100%;max-height:100%;"/>
             </div>
-
-            <div id="json_result" class="json_result">
-
-            </div>
+            <div style="width:354px;height:590px;float:left;background-color:gray;color:white;font-size:13px;text-align:left;">
+                <textarea id="json_result" style="padding:5px;width:100%;height:100%;overflow:auto">
+                    
+                </textarea>
         </div>
+
     </body>
 </html>
